--- a/one-man-studio-website/public/index.html
+++ b/one-man-studio-website/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link href="https://fonts.cdnfonts.com/css/gill-sans-nova-cond-ultra-bold" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0f9e95c16a.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
